[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/textures/32text/32door2.png" type="Texture" id=1]
[ext_resource path="res://scenes/monsteroftime/doorinterior.gd" type="Script" id=2]
[ext_resource path="res://asset/sounds/door1.wav" type="AudioStream" id=3]
[ext_resource path="res://asset/sounds/doorclose.wav" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=64]
albedo_color = Color( 0.666667, 0.52549, 0.0980392, 1 )
albedo_texture = ExtResource( 1 )
metallic_specular = 0.0
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="CubeMesh" id=59]
material = SubResource( 64 )
size = Vector3( 5, 8, 0.5 )

[sub_resource type="ConcavePolygonShape" id=60]
data = PoolVector3Array( -2.5, 4, 0.25, 2.5, 4, 0.25, -2.5, -4, 0.25, 2.5, 4, 0.25, 2.5, -4, 0.25, -2.5, -4, 0.25, 2.5, 4, -0.25, -2.5, 4, -0.25, 2.5, -4, -0.25, -2.5, 4, -0.25, -2.5, -4, -0.25, 2.5, -4, -0.25, 2.5, 4, 0.25, 2.5, 4, -0.25, 2.5, -4, 0.25, 2.5, 4, -0.25, 2.5, -4, -0.25, 2.5, -4, 0.25, -2.5, 4, -0.25, -2.5, 4, 0.25, -2.5, -4, -0.25, -2.5, 4, 0.25, -2.5, -4, 0.25, -2.5, -4, -0.25, 2.5, 4, 0.25, -2.5, 4, 0.25, 2.5, 4, -0.25, -2.5, 4, 0.25, -2.5, 4, -0.25, 2.5, 4, -0.25, -2.5, -4, 0.25, 2.5, -4, 0.25, -2.5, -4, -0.25, 2.5, -4, 0.25, 2.5, -4, -0.25, -2.5, -4, -0.25 )

[sub_resource type="Animation" id=61]
resource_name = "open"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 3.87576, 0 ), Vector3( -1.85383, 3.87576, 2.49389 ), Vector3( -1.85383, 3.87576, 2.49389 ), Vector3( 0, 3.87576, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -85.634, 0 ), Vector3( 0, -85.634, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 3.87576, 0 ), Vector3( -1.85383, 3.87576, 2.49389 ), Vector3( -1.85383, 3.87576, 2.49389 ), Vector3( 0, 3.87576, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -85.634, 0 ), Vector3( 0, -85.634, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("front:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.478874, -9.53674e-07, 1.48864 ), Vector3( 1.32206, -9.53674e-07, 4.34628 ), Vector3( 0.561272, 0, -1.71342 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("back:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.479, 0, -1.489 ), Vector3( 0.479, 0, 5.19986 ), Vector3( 0.479, 0, 1.87198 ) ]
}
tracks/6/type = "audio"
tracks/6/path = NodePath("AudioStreamPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0, 1.6 )
}

[sub_resource type="BoxShape" id=62]
extents = Vector3( 2.01789, 1.56527, 1.56616 )

[sub_resource type="BoxShape" id=63]
extents = Vector3( 2.01789, 1.56527, 1 )

[node name="doorinterior" type="StaticBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.87576, 0 )
mesh = SubResource( 59 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.87576, 0 )
shape = SubResource( 60 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 61 )

[node name="front" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.561272, 0, -1.71342 )

[node name="back" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.479, 0, 1.87198 )

[node name="Areafront" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areafront"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.161067 )
shape = SubResource( 62 )

[node name="Areaback" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.73686 )
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areaback"]
shape = SubResource( 63 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[connection signal="body_entered" from="Areafront" to="." method="_on_Areafront_body_entered"]
[connection signal="body_exited" from="Areafront" to="." method="_on_Areafront_body_exited"]
[connection signal="body_entered" from="Areaback" to="." method="_on_Areaback_body_entered"]
[connection signal="body_exited" from="Areaback" to="." method="_on_Areaback_body_exited"]
